<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.SendDataActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendDataEditText"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/sendDatabutton"
        android:layout_alignStart="@+id/sendDatabutton" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendDatabutton"
        android:layout_below="@+id/sendDataEditText"
        android:layout_centerVertical="true"
        android:text="@string/sendDataButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="sendDataButtonPressed"/>
</RelativeLayout>
