<resources>
    <string name="app_name">Parasable</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in">Log In</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_push_send_data_view">Send Data</string>
    <string name="action_push_create_acct_view">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="endPoint">http://54.186.152.100/80</string>

    <!-- Login Screen -->

    <string name="displayErrorTitlePostfix"> has caused an error</string>
    <string name="displayErrorMessagePostfix"> Failed</string>
    <string name="displaySuccessButton">SUCCESS!</string>
    <string name="logOutButton">Log Out Button</string>
    <string name="logInButton">Log In Button</string>

    <!-- Send Data Screen -->

    <string name="sendDataButton">Send Data</string>

    <!-- Bundle Keys -->

    <string name="authtoken_bun_key">Auth_Token_Key</string>

</resources>
